go-service/service-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gin-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gin-api
  template:
    metadata:
      labels:
        app: gin-api
    spec:
      containers:
        - name: gin-api
          image: nesgnas/thesis-service-a
          ports:
            - containerPort: 9000
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: gin-api-service
  namespace: default
spec:
  selector:
    app: gin-api
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
